--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,8 +11,13 @@ node {
     writeFile(file: "output/uselessfile.md", text: "This file is useless, no need to archive it.")
 
     stage "Archive build output"
-    sh "echo T...."
+    
+
     
     // Archive the build output artifacts.
     archiveArtifacts(artifacts: 'output/*.txt', excludes: 'output/*.md')
+
+    stage "docker"
+    
+    sh "docker ps"
 }
