--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,23 +1,42 @@
-node {
-    stage "Create build output"
+// node {
+//     stage "Create build output"
     
-    // Make the output directory.
-    sh "mkdir -p output"
+//     // Make the output directory.
+//     sh "mkdir -p output"
 
-    // Write an useful file, which is needed to be archived.
-    writeFile(file: "output/usefulfile.txt", text: "This file is useful, need to archive it.")
+//     // Write an useful file, which is needed to be archived.
+//     writeFile(file: "output/usefulfile.txt", text: "This file is useful, need to archive it.")
 
-    // Write an useless file, which is not needed to be archived.
-    writeFile(file: "output/uselessfile.md", text: "This file is useless, no need to archive it.")
+//     // Write an useless file, which is not needed to be archived.
+//     writeFile(file: "output/uselessfile.md", text: "This file is useless, no need to archive it.")
 
-    stage "Archive build output"
+//     stage "Archive build output"
     
 
     
-    // Archive the build output artifacts.
-    archiveArtifacts(artifacts: 'output/*.txt', excludes: 'output/*.md')
+//     // Archive the build output artifacts.
+//     archiveArtifacts(artifacts: 'output/*.txt', excludes: 'output/*.md')
 
-    stage "docker"
+//     stage "docker"
     
-    sh "docker ps"
-}
+//     sh "docker ps"
+// }
+
+ pipeline {
+   agent any
+
+   stages {
+      stage('Check the branch') {
+         steps {
+            echo "$GIT_BRANCH"
+         }
+           node {
+                            script {
+
+                        sh "mkdir -p output"
+                        writeFile(file: "output/usefulfile.txt", text: "This file is useful, need to archive it.")
+                            }
+           }
+      }
+    }
+ }
