--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@
                     node{
                         echo "$GIT_BRANCH"
                         sh "mkdir -p output"
-                        writeFile(file: "output/usefulfile.txt", text: "This file is useful, need to archive it.")
+                        writeFile file: "output/test.txt", text: "asarchive it."
                     }
   
                 }
